src/static/home.css
body {
  background: #265661;
  color: #6E364B;
  text-align: center;
}

.nav {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.navlink {
  color: #6E364B;
  background: #3396AD;
  height: 20px;
  width: auto;
  border-radius: 5px;
  padding: 5px;
  margin: 3px;
}

.button {
  color: #6E364B;
  background: #3396AD;
  border-radius: 5px;
  margin: 10px;
  padding: 10px;
  border:none;
  font-size:1em;
  font-weight: inherit;
  font-family: inherit;
}

button:focus {
  outline:0;
}

.button:hover:enabled {
  background: #3396AD;
  color: #948B2B;
  text-decoration: none;
}

.button:active {
  transform: translateY(1px);
}

.result {
  color: #ADA33B;
  font-size: 8em;
}

.subHeader {
  color: #ADA33B;
}

